# Aurora

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  a.out  algebraic.h  board.h  defs.h  fen.h  move.h  position.h  test.cpp
.github/workflows/: rust-clippy.yml
docs/: CONTRIBUTING.md  README.md
src/: algebraic.h  board.h  defs.h  eval.h  fen.h  main.cpp  makemove.h  move.h  movegen  movegen-helpers.h  movegen.cpp  movegen.h  movemanager.cpp  movesearch.cpp  movesearch.h  node-id.h  node.h  position.h  searchtree.h  test.cpp  tests.cpp
src/output/: tests
